--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     </div>
                     
                 </div>
+                <!-- <img src="./images/images 2.png" alt=""> -->
                 <img src="./images/images 2.png" alt="">
                 
             </div>
